# DexLatent

./: .gitignore  CLAUDE.md  NEW_EMBODIMENT.md  RESULT.md  TODO.md  pyproject.toml
Assets/xarm7_allegro/: xarm7_allegro_left.urdf  xarm7_allegro_right.urdf
HandLatent/: evaluate.py  infer.py  kinematics.py  model.py  train.py  view_urdf.py
